2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error regarding BUFSIZE.
	* src/DownloadCommand.cc
	* src/DownloadCommand.h

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented tellWaiting xml-rpc method in man page.
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.5.0
	* configure.ac

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed resolved TODO1.5
	* src/AbstractCommand.cc
	* src/DownloadCommand.cc
	* src/RequestGroup.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release pooled and in-flight Request objectsand URIResult objects
	in FileEntry after download completed.
	* src/DownloadContext.cc
	* src/DownloadContext.h
	* src/FileEntry.cc
	* src/FileEntry.h
	* src/RequestGroup.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Set manual and source attribute in aria2c.1.txt
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented that the default value of --use-head is 'false' in man
	page.
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added bt-stop-timeout option to -i list.
	* doc/aria2c.1.txt
	* src/download_helper.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* doc/aria2c.1.txt
	* src/usage_text.h

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed peer-id-prefix option from -i list.
	* doc/aria2c.1.txt
	* src/download_helper.cc

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* doc/aria2c.1.txt
	* src/usage_text.h

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --bt-stop-timeout option in man page.
	* doc/aria2c.1.txt

2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
