@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.0 <http://docbook.sf.net/>
-.\"      Date: 07/05/2009
+.\"      Date: 07/06/2009
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "07/05/2009" "Aria2" "Aria2 Manual"
+.TH "ARIA2C" "1" "07/06/2009" "Aria2" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * set default formatting
 .\" -----------------------------------------------------------------
@@ -538,7 +538,7 @@ Seed previously downloaded files without verifying piece hashes\&. Default:
 .PP
 \fB\-\-bt\-stop\-timeout\fR=SEC
 .RS 4
-Stop BitTorrent download if download speed is 0 and the number of seeder is 0 in consecutive NUM seconds\&. If
+Stop BitTorrent download if download speed is 0 in consecutive NUM seconds\&. If
 \fI0\fR
 is given, this feature is disabled\&. Default:
 \fI0\fR
