@@ -1103,9 +1103,8 @@ writes the piece to the appropriate files.</td>
 </dt>
 <dd>
 <p>
-  Stop BitTorrent download if download speed is 0 and the number of
-  seeder is 0 in consecutive NUM seconds. If <em>0</em> is given, this
-  feature is disabled.  Default: <em>0</em>
+  Stop BitTorrent download if download speed is 0 in consecutive NUM
+  seconds. If <em>0</em> is given, this feature is disabled.  Default: <em>0</em>
 </p>
 </dd>
 <dt class="hdlist1">
@@ -3197,7 +3196,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-07-05 18:30:39 JST
+Last updated 2009-07-06 22:33:35 JST
 </div>
 </div>
 </body>
