@@ -1,3 +1,12 @@
+2009-07-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	--bt-stop-timeout now only checks download speed.
+	* src/BtStopDownloadCommand.cc
+	* src/BtStopDownloadCommand.h
+	* src/BtSetup.cc
+	* src/usage_text.h
+	* doc/aria2c.1.txt
+
 2009-07-05  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Fixed compile error regarding BUFSIZE.
